--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.93.2",
     "@types/next-auth": "^3.13.0",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
